# kontur-account

./: .coveragerc  .pre-commit-config.yaml  LINTERS_GUIDE.md  README.md  main.py  pyproject.toml  pytest.ini
.github/: DockerfileTest  requirements-test.txt  requirements.txt
.github/workflows/: on-push-in-work-branch.yaml.yml
infrastructure/pg/: pg.py
infrastructure/redis_client/: redis_client.py
infrastructure/telemetry/: alertmanger.py  logger.py  telemetry.py
internal/app/http/: app.py
internal/common/: const.py  error.py
internal/config/: config.py
internal/interface/: __init__.py  account.py  general.py
internal/interface/client/: kontur_authorization.py  loom_authorization.py
internal/migration/: manager.py
internal/migration/version/: v0_0_1_initial_schema.py
internal/model/: __init__.py  account.py  general.py  sql_model.py
internal/model/client/: loom_authorization.py
internal/repo/account/: repo.py  sql_query.py
internal/service/account/: service.py
pkg/client/: client.py
pkg/log_wrapper/: log_wrapper.py
pkg/trace_wrapper/: trace_wrapper.py
tests/: README.md  TESTING_GUIDE.md  conftest.py  requirements-test.txt
tests/factories/: __init__.py  account_factory.py  auth_factory.py
tests/fixtures/: conftest.py
tests/integration/: conftest.py
tests/integration/api/: conftest.py  test_account_api.py  test_account_api_example.py
tests/integration/clients/: conftest.py  test_loom_authorization_client_example.py
tests/mocks/: db_mock.py  loom_authorization_mock.py  repo_mock.py  telemetry_mock.py
tests/unit/: conftest.py
tests/utils/: __init__.py  assertions.py  crypto.py  db_helpers.py  helpers.py  mock_builders.py
(+12 files in other folders)
