[project]
name = "loom-account"
version = "0.1.0"
description = "Loom Account Service"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "test_env",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "ASYNC",
]

#ignore = [
#    "E501",   # line too long (у нас 120, но иногда можно больше)
#    "B008",   # do not perform function calls in argument defaults (часто нужно в FastAPI)
#    "UP007",  # Use `X | Y` for type annotations (можем оставить Optional)
#]

# Разрешаем неиспользуемые переменные, начинающиеся с _
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]
"__init__.py" = [
    "F401",  # unused imports
]

[tool.ruff.lint.isort]
known-first-party = ["internal", "infrastructure", "pkg"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "test_env",
    ".venv",
    "venv",
]

[[tool.mypy.overrides]]
module = [
    "bcrypt.*",
    "pyotp.*",
    "qrcode.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "test_env",
    "tests",
    ".venv",
    "venv",
]
skips = [
    "B101",  # assert_used - нормально для тестов
]

